--- a/bstest.html
+++ b/bstest.html
@@ -1,19 +1,92 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>Bootstrap 模板</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- 引入 Bootstrap -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-      <h1>Hello, world!</h1>
-	  <p>A P label</p>
-	  <div>
-		Main Part Here
-	  </div>
- 
-      <script src="js/jquery-3.4.1.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-    </body>
+<html lang="zh-CN">
+	<head>
+		<mata charset="utf-8">
+		<title>Tester Website</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="./css/bootstrap.css" rel="stylesheet">
+		<link href="./css/bootstrap-responsive.css" rel="stylesheet">
+		<style>
+			body {
+				padding-top: 60px;
+				padding-bottom: 40px;
+			}
+		</style>
+	</head>
+
+	<body>
+
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="brand" href="#">Name here</a>
+					<div class="nav-collapse collapse">
+						<ul class="nav">
+							<li class="active"><a href="#">Home</a></li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#contact">Contact</a></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<b class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li><a href="#">Submenu here</a></li>
+									<li><a href="#">Action</a></li>
+									<li><a href="#">Action</a></li>
+									<li><a href="#">Action</a></li>
+								</ul>
+							</li>
+							<li><a href="#contact">Menus here</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<h1>Main Part Here</h1>
+			<p>Writing HTML is much harder than previously thought</p>
+			<div class="hero-unit">
+				<h2>Intro or news here</h2>
+				<p>detailed intro</p>
+			</div>
+			<div class="row">
+				<div class="span4">
+					<h3>You can use row of columns</h3>
+					<p>detailed intro</p>
+				</div>
+				<div class="span4">
+					<h3>You can use row of columns</h3>
+					<p>detailed intro</p>
+				</div>
+				<div class="span4">
+					<h2>You can use row of columns</h2>
+					<p>detailed intro</p>
+				</div>
+			</div>
+
+			<hr>
+			<footer>
+				<p>Footer. Some info. </p>
+			</footer>
+		</div>
+
+	    <script src="./js/jquery.js"></script>
+		<script src="./js/bootstrap-transition.js"></script>
+		<script src="./js/bootstrap-alert.js"></script>
+		<script src="./js/bootstrap-modal.js"></script>
+		<script src="./js/bootstrap-dropdown.js"></script>
+		<script src="./js/bootstrap-scrollspy.js"></script>
+		<script src="./js/bootstrap-tab.js"></script>
+		<script src="./js/bootstrap-tooltip.js"></script>
+		<script src="./js/bootstrap-popover.js"></script>
+		<script src="./js/bootstrap-button.js"></script>
+		<script src="./js/bootstrap-collapse.js"></script>
+		<script src="./js/bootstrap-carousel.js"></script>
+		<script src="./js/bootstrap-typeahead.js"></script>
+	
+	</body>
 </html>
