Now the website has more contents, and like a real web, wikipedia onlined

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 							<li><a href="./news.html">社团新闻</a></li>
 							<li><a href="./mat.html">活动资料</a></li>
 							<li class="dropdown">
-								<a class="dropdown-toggle" data-toggle="dropdown" href="./srv.html">社团服务<b class="caret"></b></a>
+								<a href="./srv.html" class="dropdown-toggle" data-toggle="dropdown">社团服务<b class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li><a href="./fileshare">电子书库</a></li>
 									<li><a href="http://202.38.70.7:23334">Wikipedia学科镜像</a></li>
@@ -43,49 +43,29 @@
 		</div>
 
 		<div class="container">
-			<div>
-				<h3>
-					<blockquote>
-							格非求是，意气且抒鸿鹄志<br>
-							物理偕推，溟涬开元有所为<br>
-							致功家国，不问浮名讵可得<br>
-							知道苍茫，笑语星辰路方长<br>
-					</blockquote>
-				</h3>
-				<h2 style="color:crimson">这里是中科大格物致知社官方网站</h2>
-			</div>
-			<div class="hero-unit">
-				<h2>Website under construction, keep an eye	 here!</h2>
-				<p>[置顶]格物致知社网站正在建设中，更多内容敬请期待</p>
-			</div>
-			<div class="hero-unit">
-				<h3>Wikipedia学科镜像上线！</h3>
-				<p>
-					维基百科数学、物理内容现已上线，欢迎访问。<br/>
-					请用校园网（ustcnet或者eduroam）访问<a href="http://202.38.70.7:23334">202.38.70.7:23334</a>即可启用搜索<br/>
-					已严格遵守维基百科的相关的版权协议
-				</p>
-				<p>
-					2019.07.01
-				</p>
-			</div>
-			<!--
-			<div class="row">
-				<div class="span4">
-					<h3></h3>
-					<p>detailed intro</p>
-				</div>
-				<div class="span4">
-					<h3>You can use row of columns</h3>
-					<p>detailed intro</p>
-				</div>
-				<div class="span4">
-					<h2>You can use row of columns</h2>
-					<p>detailed intro</p>
-				</div>
-			</div>
-			-->
-
+            <div>
+                <h4>
+                        格物致知，不仅是一个社团。<br>
+                        这里，凝聚着每一位社员的期许与信念。<br>
+                        从最初的数人小组到现在300余位成员，<br>
+                        不变的是我们的情怀——赤忱研学，以笔筑梦，<br>
+                        为了共同的进步，为了承担起我们对未来的责任。<br>
+                        <br>
+                        我们希望格物致知会是你失意时的港湾，寻梦时的灯塔。<br>
+                        社团的创建离不开每一位同学，格物会和大家一起砥砺前行。<br>
+                </h4>
+                <img src="./img/gewulogo.jpg" height="200" width="200"/>
+                <h2>联系我们</h2>
+                <p><b>
+                    
+                    社团QQ群：793485839<br>
+                    QQ公众号：2460966866<br>
+                    技术支持、意见反馈：servername@qq.com<br>
+                </b></p>
+            </div>
+            <div>
+                <h3>感谢少年班学院学生会提供服务器支持</h3>
+            </div>
 			<hr>
 			<footer>
 				<p>© 中科大格物致知社 2018-2019</p>
