--- a/mat.html
+++ b/mat.html
@@ -27,7 +27,7 @@
 							<li><a href="./news.html">社团新闻</a></li>
 							<li><a href="./mat.html">活动资料</a></li>
 							<li class="dropdown">
-								<a class="dropdown-toggle" data-toggle="dropdown" href="./srv.html">社团服务<b class="caret"></b></a>
+								<a href="./srv.html" class="dropdown-toggle" data-toggle="dropdown">社团服务<b class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li><a href="./fileshare">电子书库</a></li>
 									<li><a href="http://202.38.70.7:23334">Wikipedia学科镜像</a></li>
@@ -43,49 +43,13 @@
 		</div>
 
 		<div class="container">
-			<div>
-				<h3>
-					<blockquote>
-							格非求是，意气且抒鸿鹄志<br>
-							物理偕推，溟涬开元有所为<br>
-							致功家国，不问浮名讵可得<br>
-							知道苍茫，笑语星辰路方长<br>
-					</blockquote>
-				</h3>
-				<h2 style="color:crimson">这里是中科大格物致知社官方网站</h2>
-			</div>
-			<div class="hero-unit">
-				<h2>Website under construction, keep an eye	 here!</h2>
-				<p>[置顶]格物致知社网站正在建设中，更多内容敬请期待</p>
-			</div>
-			<div class="hero-unit">
-				<h3>Wikipedia学科镜像上线！</h3>
-				<p>
-					维基百科数学、物理内容现已上线，欢迎访问。<br/>
-					请用校园网（ustcnet或者eduroam）访问<a href="http://202.38.70.7:23334">202.38.70.7:23334</a>即可启用搜索<br/>
-					已严格遵守维基百科的相关的版权协议
-				</p>
-				<p>
-					2019.07.01
-				</p>
-			</div>
-			<!--
-			<div class="row">
-				<div class="span4">
-					<h3></h3>
-					<p>detailed intro</p>
-				</div>
-				<div class="span4">
-					<h3>You can use row of columns</h3>
-					<p>detailed intro</p>
-				</div>
-				<div class="span4">
-					<h2>You can use row of columns</h2>
-					<p>detailed intro</p>
-				</div>
-			</div>
-			-->
-
+            <div class="hero-unit">
+                社团资料，包括一些活动文档、资料、视频等。
+            </div>
+            <div class="embed-responsive">
+                <p>蔡一夫教授粒子宇宙学组采访视频 方承强提供</p>
+                <iframe class="embed-responsive-item" src="./fileshare/蔡一夫-粒子宇宙学组采访.mp4" allowfullscreen></iframe>
+            </div>
 			<hr>
 			<footer>
 				<p>© 中科大格物致知社 2018-2019</p>
