Updated some information, clean up, added new stuff, seems it is time to continue dev

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 			<div class="navbar-inner">
 				<div class="container">
 					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-						<span class="icon-bar"></span>
+						<!--<span class="icon-bar"></span>-->
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -24,7 +24,7 @@
 					<div class="nav-collapse collapse">
 						<ul class="nav">
 							<!-- <li><a href="./intro.html">社团介绍</a></li> -->
-							<li><a href="./news.html">社团新闻</a></li>
+							<!--<li><a href="./news.html">社团新闻</a></li>-->
 							<li><a href="./mat.html">活动资料</a></li>
 							<li class="dropdown">
 								<a href="./srv.html" class="dropdown-toggle" data-toggle="dropdown">社团服务<b class="caret"></b></a>
@@ -60,7 +60,7 @@
                     
                     社团QQ群：793485839<br>
                     QQ公众号：2460966866<br>
-                    技术支持、意见反馈：servername@qq.com<br>
+                    技术支持、意见反馈：guyimin(AT)mail.ustc.edu.cn<br>
                 </b></p>
             </div>
             <div>
