--- a/index.html
+++ b/index.html
@@ -18,23 +18,12 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
 					</button>
 					<a class="brand" href="./index.html">格物致知社</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<!-- <li><a href="./intro.html">社团介绍</a></li> -->
-							<li><a href="./news.html">社团新闻</a></li>
 							<li><a href="./mat.html">活动资料</a></li>
-							<li class="dropdown">
-								<a class="dropdown-toggle" data-toggle="dropdown" href="./srv.html">社团服务<b class="caret"></b></a>
-								<ul class="dropdown-menu">
-									<li><a href="./fileshare">电子书库</a></li>
-									<li><a href="http://202.38.70.7:23334">Wikipedia学科镜像</a></li>
-									<li><a href="#">Coming Soon</a></li>
-									<li><a href="#">Coming Soon</a></li>
-								</ul>
-							</li>
+							<li><a href="./srv.html">社团服务</a></li>
 							<li><a href="./about.html">关于我们</a></li>
 						</ul>
 					</div>
@@ -54,9 +43,24 @@
 				</h3>
 				<h2 style="color:crimson">这里是中科大格物致知社官方网站</h2>
 			</div>
+			<div class="hero-unit" style="background-color:#FFDDDD">
+				<h2>Website under construction, keep an eye here!</h2>
+				<h2>[置顶]格物致知社网站正在建设中，更多内容敬请期待</h2>
+				<p>想要加入我们？<a href="./about.html">Here</a></p>
+				<p>对网页及服务有意见/建议？<a href="https://github.com/ustcpetergu/GeWe-website">欢迎Issue/Pull Request</a></p>
+				<p>想要加入开发？请联系ustcpetergu(guyimin(AT)mail.ustc.edu.cn)</p>
+			</div>
 			<div class="hero-unit">
-				<h2>Website under construction, keep an eye	 here!</h2>
-				<p>[置顶]格物致知社网站正在建设中，更多内容敬请期待</p>
+				<h3>Wikipedia化学镜像上线！</h3>
+				<p>
+					2019.11.4
+				</p>
+			</div>
+			<div class="hero-unit">
+				<h3>实验室信息平台正在搭建中，敬请期待</h3>
+				<p>
+					2019.10
+				</p>
 			</div>
 			<div class="hero-unit">
 				<h3>Wikipedia学科镜像上线！</h3>
@@ -85,14 +89,19 @@
 				</div>
 			</div>
 			-->
-
+			<div>
+				<p>
+					Last edited by: <a href="https://ustcpetergu.github.io/">ustcpetergu</a> 2019.11.4</br>
+					This website is still alive!
+				</p>
+			</div>
 			<hr>
 			<footer>
 				<p>© 中科大格物致知社 2018-2019</p>
 			</footer>
 		</div>
 
-	    <script src="./js/jquery.js"></script>
+		<script src="./js/jquery.js"></script>
 		<script src="./js/bootstrap-transition.js"></script>
 		<script src="./js/bootstrap-alert.js"></script>
 		<script src="./js/bootstrap-modal.js"></script>
