--- a/mat.html
+++ b/mat.html
@@ -18,23 +18,12 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
 					</button>
 					<a class="brand" href="./index.html">格物致知社</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<!-- <li><a href="./intro.html">社团介绍</a></li> -->
-							<li><a href="./news.html">社团新闻</a></li>
 							<li><a href="./mat.html">活动资料</a></li>
-							<li class="dropdown">
-								<a href="./srv.html" class="dropdown-toggle" data-toggle="dropdown">社团服务<b class="caret"></b></a>
-								<ul class="dropdown-menu">
-									<li><a href="./fileshare">电子书库</a></li>
-									<li><a href="http://202.38.70.7:23334">Wikipedia学科镜像</a></li>
-									<li><a href="#">Coming Soon</a></li>
-									<li><a href="#">Coming Soon</a></li>
-								</ul>
-							</li>
+							<li><a href="./srv.html">社团服务</a></li>
 							<li><a href="./about.html">关于我们</a></li>
 						</ul>
 					</div>
@@ -43,20 +32,20 @@
 		</div>
 
 		<div class="container">
-            <div class="hero-unit">
-                社团资料，包括一些活动文档、资料、视频等。
-            </div>
-            <div class="embed-responsive">
-                <p>蔡一夫教授粒子宇宙学组采访视频 方承强提供</p>
-                <iframe class="embed-responsive-item" src="./fileshare/蔡一夫-粒子宇宙学组采访.mp4" allowfullscreen></iframe>
-            </div>
+			<div class="hero-unit">
+				社团资料，包括一些活动文档、资料、视频等。
+			</div>
+			<div class="embed-responsive">
+				<p>蔡一夫教授粒子宇宙学组采访视频 方承强提供</p>
+				<iframe class="embed-responsive-item" src="./fileshare/蔡一夫-粒子宇宙学组采访.mp4" allowfullscreen></iframe>
+			</div>
 			<hr>
 			<footer>
 				<p>© 中科大格物致知社 2018-2019</p>
 			</footer>
 		</div>
 
-	    <script src="./js/jquery.js"></script>
+		<script src="./js/jquery.js"></script>
 		<script src="./js/bootstrap-transition.js"></script>
 		<script src="./js/bootstrap-alert.js"></script>
 		<script src="./js/bootstrap-modal.js"></script>
