--- a/srv.html
+++ b/srv.html
@@ -18,41 +18,41 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
 					</button>
 					<a class="brand" href="./index.html">格物致知社</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<!-- <li><a href="./intro.html">社团介绍</a></li> -->
-							<li><a href="./news.html">社团新闻</a></li>
 							<li><a href="./mat.html">活动资料</a></li>
-							<li class="dropdown">
-								<a href="./srv.html" class="dropdown-toggle" data-toggle="dropdown">社团服务<b class="caret"></b></a>
-								<ul class="dropdown-menu">
-									<li><a href="./fileshare">电子书库</a></li>
-									<li><a href="http://202.38.70.7:23334">Wikipedia学科镜像</a></li>
-									<li><a href="#">Coming Soon</a></li>
-									<li><a href="#">Coming Soon</a></li>
-								</ul>
-							</li>
+							<li><a href="./srv.html">社团服务</a></li>
 							<li><a href="./about.html">关于我们</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-
 		<div class="container">
-            <div class="hero-unit">
-                社团服务：
-            </div>
+			<div>
+				<h3>社团服务</h3>
+				<h3>Hope you enjoy.</h3>
+				<h3>感谢少年班学院学生会提供服务器支持</h3>
+			</div>
+			<div class="hero-unit">
+				<b>Wikipedia学科镜像</b>
+				社团提供维基百科数学、物理、化学分区中英文镜像，欢迎访问。
+				请用校园网（ustcnet或者eduroam）访问<a href="http://202.38.70.7:23334">202.38.70.7:23334</a><br/>
+			</div>
+			<div class="hero-unit">
+				<b>电子资料库</b>
+				现处于试运行状态。更多内容和资料敬请期待。资料仅供学习与交流用途。
+				临时网址：<a href="http://202.38.70.99/gewuqft/fileshare">http://202.38.70.99/gewuqft/fileshare</a>
+			</div>
 			<hr>
 			<footer>
 				<p>© 中科大格物致知社 2018-2019</p>
 			</footer>
 		</div>
 
-	    <script src="./js/jquery.js"></script>
+		<script src="./js/jquery.js"></script>
 		<script src="./js/bootstrap-transition.js"></script>
 		<script src="./js/bootstrap-alert.js"></script>
 		<script src="./js/bootstrap-modal.js"></script>
